Fixed name cutting of and image cutting off in mobile view

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,5 @@
+@import './styles/mixins';
+
 html {
   scroll-snap-type: y mandatory;
   scroll-behavior: smooth;
@@ -20,6 +22,15 @@ a {
   color: inherit;
 }
 
+// Mobile line break utility
+.mobile-break {
+  display: none;
+  
+  @include mobile {
+    display: block;
+  }
+}
+
 section {
   height: 100vh;
   width: 100vw;
@@ -27,18 +38,4 @@ section {
   overflow: hidden;
 }
 
-@mixin mobile {
-  @media (max-width: 738px) {
-    @content;
-  }
-}
-@mixin tablet {
-  @media (max-width: 1024px) {
-    @content;
-  }
-}
-@mixin desktop {
-  @media (max-width: 1366px) {
-    @content;
-  }
-}
+
