--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -1,4 +1,5 @@
 @import "../../app.scss";
+@import "../../styles/mixins";
 
 .hero {
   height: calc(100vh - 100px);
@@ -14,7 +15,7 @@
     .textContainer {
       width: 50%;
       height: 100%;
-      display: flex;
+      display: flex-start;
       flex-direction: column;
       justify-content: center;
       gap: 40px;
@@ -56,6 +57,7 @@
 
       img {
         width: 50px;
+        z-index: 10;
       }
     }
   }
@@ -77,6 +79,7 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      object-position: center top;
     }
   }
 
